sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:8: error: ')' expected but ';' found.
			if (plusPetit(i+1;i)) {
                                         ^AlgBubbleSort1:8: error: ';' expected but ')' found.
			if (plusPetit(i+1;i)) {
                                           ^